--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-  <meta charset="utf-8" name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scale=no'>
+  <meta charset="utf-8" name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'>
   <title>发财猫大战元宝</title>
 
   <style>
